--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#009688</color>
-    <color name="primary_dark">#00796B</color>
-    <color name="primary_light">#B2DFDB</color>
-    <color name="firebase_primary_dark">#000000</color>
-    <color name="accent">#00BCD4</color>
+    <color name="primary">#607D8B</color>
+    <color name="primary_dark">#455A64</color>
+    <color name="accent">#03A9F4</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
+    <color name="firebase_primary_dark">#000000</color>
     <color name="rating_stars_active">#ffd600</color>
     <color name="rating_stars_passive">#9b9b9b</color>
     <color name="tab_text">#FFFFFF</color>
@@ -19,4 +18,8 @@
     <color name="swiped_list_item_foreground">#FFFFFF</color>
     <color name="swiped_list_item_background">#a1887f</color>
     <color name="swiped_list_item_background_text">#fff</color>
+    <color name="profile_photo_frame">#767c7e</color>
+    <color name="nav_header_left">#212121</color>
+    <color name="nav_header_center">#455a64</color>
+    <color name="nav_header_right">#78909c</color>
 </resources>
