--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
@@ -13,18 +12,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="@dimen/nav_header_user_image_corner">
 
-        <ImageView
-            android:id="@+id/iv_nav_header"
-            android:layout_width="@dimen/nav_header_user_image_size"
-            android:layout_height="@dimen/nav_header_user_image_size"
-            android:contentDescription="@string/nav_header_desc"
-            app:srcCompat="@mipmap/ic_launcher_round" />
-    </android.support.v7.widget.CardView>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/iv_nav_header"
+        android:layout_width="@dimen/nav_header_user_image_size"
+        android:layout_height="@dimen/nav_header_user_image_size"
+        android:contentDescription="@string/nav_header_desc"
+        app:civ_border_color="@color/profile_photo_frame"
+        app:civ_border_width="2dp" />
 
 
     <TextView
