--- a/app/src/main/res/menu/menu_recipe_detail.xml
+++ b/app/src/main/res/menu/menu_recipe_detail.xml
@@ -7,6 +7,6 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/app_bar_board"
-        android:title="@string/meal_board"
+        android:title="@string/add_to_meal_plan"
         app:showAsAction="never" />
 </menu>
