--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -78,7 +78,7 @@
             android:layout_height="@dimen/recipe_detail_button_heights"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@color/accent"
-            android:text="@string/add_food"
+            android:text="@string/add_ingredient"
             android:textAllCaps="false"
             android:textColor="@color/btn_text"
             app:layout_constraintEnd_toEndOf="parent"
