--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -118,6 +118,8 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             app:errorEnabled="true"
+            app:counterEnabled="true"
+            app:counterMaxLength="@integer/max_length_recipe_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_top">
