--- a/app/src/main/res/layout/item_step.xml
+++ b/app/src/main/res/layout/item_step.xml
@@ -1,31 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/space_one_unit">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_step_number"
-        style="@style/TextStyleDataLabel"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/swiped_background"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/bullet_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/swiped_list_item_background">
 
-    <TextView
-        android:id="@+id/tv_step"
-        style="@style/TextStyleData"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="@dimen/list_item_image_size"
+            android:layout_height="@dimen/list_item_image_size"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/space_one_unit"
+            android:contentDescription="@string/delete"
+            android:src="@android:drawable/ic_menu_delete" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/space_one_unit"
+            android:layout_toStartOf="@id/delete_icon"
+            android:text="@string/delete"
+            android:textColor="@color/swiped_list_item_background_text"
+            android:textSize="@dimen/bullet_text_size" />
+
+    </RelativeLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/view_foreground"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/space_one_unit"
-        android:layout_marginEnd="@dimen/space_one_unit"
-        android:layout_marginStart="@dimen/space_two_units"
-        android:layout_marginTop="@dimen/space_one_unit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_step_number"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/swiped_list_item_foreground"
+        android:padding="@dimen/space_one_unit">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_step_number"
+            style="@style/TextStyleDataLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/bullet_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_instruction"
+            style="@style/TextStyleData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_one_unit"
+            android:layout_marginEnd="@dimen/space_one_unit"
+            android:layout_marginStart="@dimen/space_two_units"
+            android:layout_marginTop="@dimen/space_one_unit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tv_step_number"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
