--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -27,7 +27,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             <android.support.constraint.ConstraintLayout
                 android:layout_width="@dimen/edit_image_size"
                 android:layout_height="@dimen/edit_image_size"
-                android:background="?android:attr/listDivider">
+                android:background="@color/divider">
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -45,7 +45,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/accent_image" />
+                    app:srcCompat="@drawable/ic_add_photo" />
 
                 <TextView
                     android:id="@+id/tv_hint_click_to_add"
@@ -83,9 +83,10 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                     android:layout_marginStart="@dimen/space_one_unit"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/rotate_image"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@drawable/accent_rotate" />
+                    app:srcCompat="@drawable/ic_rotate_right" />
 
                 <ImageButton
                     android:id="@+id/btn_publish_recipe"
@@ -96,7 +97,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                     android:contentDescription="@string/upload"
                     app:layout_constraintBottom_toTopOf="@id/btn_rotate"
                     app:layout_constraintStart_toStartOf="@+id/btn_rotate"
-                    app:srcCompat="@drawable/accent_cloud" />
+                    app:srcCompat="@drawable/ic_cloud_upload" />
 
                 <ProgressBar
                     android:id="@+id/progress_bar_publish_recipe"
@@ -117,9 +118,9 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            app:errorEnabled="true"
             app:counterEnabled="true"
             app:counterMaxLength="@integer/max_length_recipe_title"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_top">
@@ -140,7 +141,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             android:id="@+id/divider"
             android:layout_width="@dimen/empty_frame_outline_thickness"
             android:layout_height="@dimen/recipe_overall_divider_length"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_layout_title" />
