--- a/app/src/main/res/drawable/ic_delete_sweep.xml
+++ b/app/src/main/res/drawable/ic_delete_sweep.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="24">
 
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M17 3H7c-1.1 0-1.99 0.9 -1.99 2L5 21l7-3 7 3V5c0-1.1-0.9-2-2-2z" />
+        android:fillColor="#ff0000"
+        android:pathData="M15 16h4v2h-4zm0-8h7v2h-7zm0 4h6v2h-6zM3 18c0 1.1 0.9 2 2 2h6c1.1 0 2-0.9 2-2V8H3v10zM14 5h-3l-1-1H6L5 5H2v2h12z" />
     <path android:pathData="M0 0h24v24H0z" />
 </vector>
