--- a/app/src/main/res/drawable/ic_menu_bookmarks.xml
+++ b/app/src/main/res/drawable/ic_menu_bookmarks.xml
@@ -8,5 +8,5 @@
     <path android:pathData="M0 0h24v24H0V0z" />
     <path
         android:fillColor="#000000"
-        android:pathData="M18 2.01L6 2c-1.1 0-2 0.89-2 2v16c0 1.1 0.9 2 2 2h12c1.1 0 2-0.9 2-2V4c0-1.11-0.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z" />
+        android:pathData="M19 18l2 1V3c0-1.1-0.9-2-2-2H8.99C7.89 1 7 1.9 7 3h10c1.1 0 2 0.9 2 2v13zM15 5H5c-1.1 0-2 0.9-2 2v16l7-3 7 3V7c0-1.1-0.9-2-2-2z" />
 </vector>
