--- a/app/src/main/res/drawable/ic_menu_calendar.xml
+++ b/app/src/main/res/drawable/ic_menu_calendar.xml
@@ -5,8 +5,8 @@
     android:viewportHeight="24"
     android:viewportWidth="24">
 
-    <path android:pathData="M0 0h24v24H0V0z" />
     <path
         android:fillColor="#000000"
-        android:pathData="M18 2.01L6 2c-1.1 0-2 0.89-2 2v16c0 1.1 0.9 2 2 2h12c1.1 0 2-0.9 2-2V4c0-1.11-0.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z" />
+        android:pathData="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99 0.9 -1.99 2L3 20c0 1.1 0.89 2 2 2h14c1.1 0 2-0.9 2-2V6c0-1.1-0.9-2-2-2zm0 16H5V9h14v11z" />
+    <path android:pathData="M0 0h24v24H0z" />
 </vector>
