--- a/app/src/main/res/layout/content_recipe_detail.xml
+++ b/app/src/main/res/layout/content_recipe_detail.xml
@@ -39,8 +39,8 @@
             style="@style/TextStyleDataLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/course"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/course"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/label_cook_time" />
 
@@ -92,7 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/empty_frame_outline_thickness"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/label_cuisine" />
@@ -108,17 +108,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider_servings_up" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_servings_decrement"
             android:layout_width="@dimen/recipe_detail_button_heights"
             android:layout_height="@dimen/recipe_detail_button_heights"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/space_one_unit"
-            android:background="@color/accent"
-            android:text="@string/decrement"
-            android:textColor="@color/btn_text"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/decrement_servings"
             app:layout_constraintEnd_toStartOf="@id/tv_servings"
-            app:layout_constraintTop_toBottomOf="@+id/label_servings" />
+            app:layout_constraintTop_toBottomOf="@+id/label_servings"
+            app:srcCompat="@drawable/ic_arrow_left" />
 
         <TextView
             android:id="@+id/tv_servings"
@@ -131,23 +131,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_servings_decrement" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_servings_increment"
             android:layout_width="@dimen/recipe_detail_button_heights"
             android:layout_height="@dimen/recipe_detail_button_heights"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:background="@color/accent"
-            android:text="@string/increment"
-            android:textColor="@color/btn_text"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/increment_servings"
             app:layout_constraintStart_toEndOf="@id/tv_servings"
-            app:layout_constraintTop_toTopOf="@id/btn_servings_decrement" />
+            app:layout_constraintTop_toTopOf="@id/btn_servings_decrement"
+            app:srcCompat="@drawable/ic_arrow_right" />
 
         <View
             android:id="@+id/divider_ingredients"
             android:layout_width="match_parent"
             android:layout_height="@dimen/empty_frame_outline_thickness"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_servings_increment" />
@@ -174,7 +174,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/empty_frame_outline_thickness"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/container_ingredients" />
@@ -201,7 +201,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/empty_frame_outline_thickness"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/container_steps" />
@@ -219,7 +219,6 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            android:theme="@style/RatingBar"
             style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -227,6 +226,7 @@
             android:isIndicator="false"
             android:numStars="5"
             android:stepSize="1"
+            android:theme="@style/RatingBar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/label_rating" />
@@ -236,7 +236,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/empty_frame_outline_thickness"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ratingBar" />
@@ -259,7 +259,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/empty_frame_outline_thickness"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_finished" />
