--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -18,7 +18,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/space_one_unit"
             android:contentDescription="@string/delete"
-            android:src="@android:drawable/ic_menu_delete" />
+            app:srcCompat="@drawable/ic_delete_sweep" />
 
         <TextView
             android:layout_width="wrap_content"
