--- a/app/src/main/res/menu/menu_recipe_detail.xml
+++ b/app/src/main/res/menu/menu_recipe_detail.xml
@@ -2,11 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/app_bar_board"
+        android:title="@string/add_to_meal_plan"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/app_bar_share"
         android:title="@string/share"
         app:showAsAction="never" />
     <item
-        android:id="@+id/app_bar_board"
-        android:title="@string/add_to_meal_plan"
+        android:id="@+id/app_bar_delete"
+        android:title="@string/delete"
         app:showAsAction="never" />
 </menu>
