--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,8 +16,9 @@
     <color name="image_tint_gradient_center">#32000000</color>
     <color name="image_tint_gradient_end">#96000000</color>
     <color name="swiped_list_item_foreground">#FFFFFF</color>
-    <color name="swiped_list_item_background">#a1887f</color>
-    <color name="swiped_list_item_background_text">#fff</color>
+    <color name="swiped_list_item_background">#e1e1e1</color>
+    <color name="swiped_list_item_background_text">#ff0000</color>
+    <color name="divider">#767c7e</color>
     <color name="profile_photo_frame">#767c7e</color>
     <color name="nav_header_left">#212121</color>
     <color name="nav_header_center">#455a64</color>
