--- a/app/src/main/res/menu/menu_recipe_detail_bookable.xml
+++ b/app/src/main/res/menu/menu_recipe_detail_bookable.xml
@@ -2,16 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/app_bar_bookmark"
+        android:id="@+id/menu_item_bookmark"
         android:icon="@drawable/ic_bookmark"
         android:title="@string/bookmark"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/app_bar_share"
+        android:id="@+id/menu_item_share"
+        android:icon="@drawable/ic_share"
         android:title="@string/share"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/app_bar_board"
-        android:title="@string/add_to_meal_plan"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
