--- a/app/src/main/res/layout/activity_shopping_add.xml
+++ b/app/src/main/res/layout/activity_shopping_add.xml
@@ -67,25 +67,6 @@
         app:layout_constraintStart_toStartOf="@+id/header_measure"
         app:layout_constraintTop_toBottomOf="@+id/header_measure" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_date"
-        android:layout_width="@dimen/spinner_width"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintStart_toStartOf="@+id/input_layout_amount"
-        app:layout_constraintTop_toBottomOf="@+id/input_layout_amount">
-
-        <EditText
-            android:id="@+id/text_edit_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="false"
-            android:hint="@string/best_before"
-            android:imeOptions="actionDone"
-            android:inputType="date"
-            android:longClickable="false" />
-    </android.support.design.widget.TextInputLayout>
-
     <Button
         android:id="@+id/btn_add_to_storage"
         android:layout_width="@dimen/recipe_detail_button_widths"
@@ -97,6 +78,6 @@
         android:textColor="@color/btn_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_layout_date" />
+        app:layout_constraintTop_toBottomOf="@+id/input_layout_amount" />
 
 </android.support.constraint.ConstraintLayout>
