--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_recipes"
             android:icon="@drawable/ic_menu_recipes"
-            android:title="@string/foods" />
+            android:title="@string/recipes" />
         <item
             android:id="@+id/nav_bookmarks"
             android:icon="@drawable/ic_menu_bookmarks"
