--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/text_edit_instruction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
