--- a/app/src/main/res/layout/widget_shopping_list.xml
+++ b/app/src/main/res/layout/widget_shopping_list.xml
@@ -1,13 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frame_app_widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary"
-    android:padding="@dimen/margin_widget_shopping_list">
+    android:background="@color/widget_background"
+    android:padding="@dimen/widget_margin">
 
     <TextView
-        android:id="@+id/appwidget_text"
+        android:id="@+id/tv_app_widget"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white" />
 
 </FrameLayout>
