--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="nav_header_center">#455a64</color>
     <color name="nav_header_right">#78909c</color>
     <color name="widget_background">#a6455a64</color>
+    <color name="widget_text">#FFFFFF</color>
 </resources>
