--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".fragments.IngredientsFragment">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -37,7 +37,7 @@
             app:layout_constraintStart_toEndOf="@+id/spinner_food"
             app:layout_constraintTop_toBottomOf="@+id/spinner_food" />
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_amount"
             android:layout_width="@dimen/spinner_width"
             android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
             app:layout_constraintStart_toStartOf="@+id/spinner_food"
             app:layout_constraintTop_toBottomOf="@+id/spinner_food">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_amount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                 android:maxLength="@integer/max_length_amount"
                 android:selectAllOnFocus="true"
                 android:singleLine="true" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/header_measure"
@@ -95,9 +95,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_add_ingredient" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ingredients"
         android:layout_width="match_parent"
         android:layout_height="0dp"
