--- a/app/src/main/res/layout/activity_recipe_edit.xml
+++ b/app/src/main/res/layout/activity_recipe_edit.xml
@@ -9,7 +9,7 @@
     tools:context=".activities.RecipeEditActivity">
 
     <!--suppress AndroidDomInspection -->
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         app:tabSelectedTextColor="@color/tab_text"
         app:tabTextColor="@color/tab_text" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
