--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -10,7 +10,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
     android:layout_height="match_parent"
     tools:context=".fragments.RecipesFragment">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true">
@@ -25,7 +25,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="@dimen/edit_image_size"
                 android:layout_height="@dimen/edit_image_size"
                 android:background="@color/divider">
@@ -69,10 +69,10 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom">
@@ -109,10 +109,10 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                     app:layout_constraintBottom_toTopOf="@id/btn_rotate"
                     app:layout_constraintStart_toStartOf="@+id/btn_rotate" />
 
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -126,7 +126,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_top">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_edit_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -136,7 +136,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                 android:maxLength="@integer/max_length_recipe_title"
                 android:selectAllOnFocus="true"
                 android:singleLine="true" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <View
             android:id="@+id/divider"
@@ -147,14 +147,14 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_layout_title" />
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_servings"
             android:layout_width="@dimen/spinner_width"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/input_layout_title"
             app:layout_constraintTop_toTopOf="@+id/divider">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_edit_servings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -164,16 +164,16 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                 android:maxLength="@integer/max_length_servings"
                 android:selectAllOnFocus="true"
                 android:singleLine="true" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_prep_time"
             android:layout_width="@dimen/spinner_width"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/input_layout_servings"
             app:layout_constraintTop_toBottomOf="@+id/input_layout_servings">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_edit_prep_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -183,16 +183,16 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                 android:maxLength="@integer/max_length_cook_time"
                 android:selectAllOnFocus="true"
                 android:singleLine="true" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_cook_time"
             android:layout_width="@dimen/spinner_width"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/input_layout_prep_time"
             app:layout_constraintTop_toBottomOf="@+id/input_layout_prep_time">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_edit_cook_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -202,7 +202,7 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
                 android:maxLength="@integer/max_length_cook_time"
                 android:selectAllOnFocus="true"
                 android:singleLine="true" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/header_course"
@@ -249,6 +249,6 @@ https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-
             app:layout_constraintEnd_toEndOf="@+id/spinner_cuisine"
             app:layout_constraintTop_toTopOf="@+id/input_layout_cook_time" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
