--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".fragments.RecipesFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_recipe_steps"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
