--- a/app/src/main/res/menu/menu_shopping_list.xml
+++ b/app/src/main/res/menu/menu_shopping_list.xml
@@ -5,7 +5,7 @@
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
     <item
         android:id="@+id/menu_item_share"
